--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 </head>
 <style>
 
+body{
+   display:flex;
+   justify-content:center;
+   align-items:center;
+   flex-direction:column;
+}
+
 h1{
    color:red;
 }
-
-
 
 </style>
 <body>
